# MOOS-IVP-STATHES1

./: .gitignore
missions/Lab13/alpha_range_pulse/: alpha.bhv  alpha.moos
missions/Lab13/alpha_zigleg/: alpha.bhv  launch.sh
missions/alder/: alder.bhv  alder.moos
missions/lab_07/distributed_tsp/: README.md  launch.sh  meta_shoreside.moos  meta_vehicle.bhv
missions/lab_08/search_grid/: README.md  launch.sh  meta_shoreside.moos  meta_vehicle.bhv
missions/lab_11/charlie_dana_baseline/: launch_shoreside.sh  meta_shoreside.moos  meta_vehicle.moos
missions/lab_11/charlie_dana_message/: clean.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/lab_11/charlie_dana_nodecomms/: init_field.sh  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/lab_11/charlie_dana_reassign/: launch.sh  meta_vehicle.moos
missions/lab_11/charlie_dana_recover/: meta_vehicle.moos
missions/s15_alpha_pshare/: alpha.moos  shoreside.moos  shoreside.moos.save
missions/s16_alpha_bravo_pshare/: bravo.moos  launch.sh  shoreside.moos
missions/s19_henry_gilda_auto_refuel/: meta_vehicle.bhv
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h  CMakeLists.txt  README
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry.h.save  Odometry_Info.cpp  Odometry_Info.h  main.cpp
